# anotaai_challenge

./: README.md  docker-compose.yaml
catalogs_api/: Dockerfile  Makefile  pyproject.toml
catalogs_api/app/: main.py  models.py  schemas.py
catalogs_api/app/api/: deps.py
catalogs_api/app/api/v1/: router.py
catalogs_api/app/api/v1/endpoints/: auth.py  categories.py  products.py
catalogs_api/app/core/: config.py  security.py
catalogs_api/app/database/: mongodb.py
catalogs_api/tests/: conftest.py
catalogs_api/tests/api/v1/: test_auth.py
catalogs_web/: Dockerfile  package-lock.json  package.json
