[project]
name = "catalogs-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.5",
]

[tool.mypy]
follow_imports = "normal"
warn_unused_configs = true
show_column_numbers = true
show_error_codes = true
strict = true
plugins = ["pydantic.mypy"]
files = ["main.py"]