[project]
name = "catalogs-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.9.5",
]

[tool.ruff]
target-version = "py312"
line-length = 119
src = ["app"]

[tool.ruff.format]
line-ending = "lf"
indent-style = "space"
quote-style = "single"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D104", "D203", "D213", "D401", "D406", "D407", "D413", "COM812", "ISC001", "Q000", "Q003"]

[tool.mypy]
follow_imports = "normal"
warn_unused_configs = true
show_column_numbers = true
show_error_codes = true
strict = true
plugins = ["pydantic.mypy"]
files = ["app/**/*.py"]